Fix problem with save button on narrow devices

--- a/wger/core/static/css/bootstrap-custom.css
+++ b/wger/core/static/css/bootstrap-custom.css
@@ -100,7 +100,7 @@ body {
     margin-left: -30px;
 }
 
-#nav {
+.row-offcanvas #nav {
     overflow-y: scroll;
     overflow-x: hidden;
     position: fixed;
